testing/grantlee: fix build with recent Qt

--- a/testing/grantlee/APKBUILD
+++ b/testing/grantlee/APKBUILD
@@ -10,7 +10,9 @@ license="LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev qt5-qtscript-dev graphviz-dev"
 makedepends="$depends_dev cmake doxygen graphviz"
 checkdepends="xvfb-run"
-source="http://downloads.grantlee.org/$pkgname-$pkgver.tar.gz"
+source="http://downloads.grantlee.org/$pkgname-$pkgver.tar.gz
+	0001-Remove-vestigial-ansi-flag.patch
+	0002-fix-build-with-qt-5.13-gcc-8.2.patch"
 subpackages="$pkgname-dev $pkgname-doc"
 
 build() {
@@ -30,4 +32,6 @@ package() {
 	DESTDIR="$pkgdir" make install
 	install -Dm644 apidox/* -t "$pkgdir"/usr/share/doc/$pkgname
 }
-sha512sums="2b806a0770b9c6d02f207d5b4939ae8cae325de4fa01901320ffef5c8442ef0f1c10dd799966d0bf0d223e6541f93db8568aaf922ea1b334bcb2f85f6373a936  grantlee-5.1.0.tar.gz"
+sha512sums="2b806a0770b9c6d02f207d5b4939ae8cae325de4fa01901320ffef5c8442ef0f1c10dd799966d0bf0d223e6541f93db8568aaf922ea1b334bcb2f85f6373a936  grantlee-5.1.0.tar.gz
+4c196b7a533beb60b9b64760f419442ab7eef154b5650b88dbfa8f7682b16dd2f290eed1717235397abde32cbd601230baadac108042bed361c2ebf3d1fd9514  0001-Remove-vestigial-ansi-flag.patch
+552e1831dd58d9751a56d09bef9b7548e5f7e7e6bc7b71cefd21cee4bce99c0fd4fd31978729e6677041731a73bf01c93ff1b984906bd44c584e9d83f54aac3a  0002-fix-build-with-qt-5.13-gcc-8.2.patch"
