testing/ettercap: fix build with None build type

--- a/testing/ettercap/APKBUILD
+++ b/testing/ettercap/APKBUILD
@@ -11,7 +11,8 @@ makedepends="cmake make gcc musl-dev ncurses-dev curl-dev libpcap-dev
 	libnet-dev pcre-dev flex bison linux-headers geoip-dev
 	check-dev"
 subpackages="$pkgname-doc lib$pkgname:libs"
-source="https://github.com/Ettercap/ettercap/releases/download/v$pkgver/ettercap-$pkgver.tar.gz"
+source="https://github.com/Ettercap/ettercap/releases/download/v$pkgver/ettercap-$pkgver.tar.gz
+	none-build-type.patch"
 
 build() {
 	mkdir build
@@ -41,4 +42,5 @@ package() {
 	make -C  build DESTDIR="$pkgdir" install
 }
 
-sha512sums="d7058c1c633647bb5ae8575826c0c03e2adcc079e79b2cb188b2ab99cd7980ca439170571b8f80a98cc3327ce2cae9ad906391c1d79cfd763bacb3e6abf61b27  ettercap-0.8.3.tar.gz"
+sha512sums="d7058c1c633647bb5ae8575826c0c03e2adcc079e79b2cb188b2ab99cd7980ca439170571b8f80a98cc3327ce2cae9ad906391c1d79cfd763bacb3e6abf61b27  ettercap-0.8.3.tar.gz
+9aae86ee1599b4ffa0b9c0c5acc7939675db12c02d53f0e47d6e18acc513c020e0dbc63812536f8d8716132e0f8aeaf2ff737b0c9d11e8d814074ded82093b7c  none-build-type.patch"
