testing/opensubdiv: add missing dependency on libxrandr
Otherwise fails with:

	CMake Error at cmake/FindGLFW.cmake:146 (message):
	  Xrandr library not found - required for GLFW
	Call Stack (most recent call first):
	  CMakeLists.txt:344 (find_package)

--- a/testing/opensubdiv/APKBUILD
+++ b/testing/opensubdiv/APKBUILD
@@ -9,7 +9,8 @@ pkgdesc="An Open-Source subdivision surface library"
 url="http://graphics.pixar.com/opensubdiv"
 arch="all"
 license="Apache-2.0"
-makedepends="cmake glew-dev glfw-dev doxygen py3-docutils libxcursor-dev"
+makedepends="cmake glew-dev glfw-dev doxygen py3-docutils
+	libxcursor-dev libxrandr-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-tutorials $pkgname-tools"
 source="$pkgname-$pkgver.tar.gz::https://github.com/PixarAnimationStudios/$_pkgname/archive/v$_pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$_pkgver"
