testing/keystone: fix build with None build type

--- a/testing/keystone/APKBUILD
+++ b/testing/keystone/APKBUILD
@@ -11,7 +11,8 @@ depends=""
 makedepends="cmake python3-dev"
 install=""
 subpackages="$pkgname-dev $pkgname-doc $pkgname-python"
-source="$pkgname-$pkgver.tar.gz::https://github.com/keystone-engine/$pkgname/archive/$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/keystone-engine/$pkgname/archive/$pkgver.tar.gz
+	none-build-type.patch"
 builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
@@ -47,4 +48,5 @@ python() {
 	python3 setup.py install --prefix=/usr --root="$subpkgdir"
 }
 
-sha512sums="3bd9c3793d5862a0a8628b52da381625e62445f661dbd5ed715723e7d9db01ce3f9586e5ca0a5cc71e8ceb6c912050f5c28e3ccd540e72c8abcfd2f0d1bbae17  keystone-0.9.1.tar.gz"
+sha512sums="3bd9c3793d5862a0a8628b52da381625e62445f661dbd5ed715723e7d9db01ce3f9586e5ca0a5cc71e8ceb6c912050f5c28e3ccd540e72c8abcfd2f0d1bbae17  keystone-0.9.1.tar.gz
+0a101a1398eec32e7cb2e5e201d8f822ec44916e7c40ed59caf89482102b536e1ec9a23bc9321bc14a4ac56db11669b4c7aa5b297942af25cf8ccf21d9483037  none-build-type.patch"
