community/latte-dock: disable on s390x
plasma-desktop is not available on both armhf and s390x.

--- a/community/latte-dock/APKBUILD
+++ b/community/latte-dock/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=latte-dock
 pkgver=0.9.8.1
 pkgrel=1
-arch="all !armhf" # armhf blocked by qt5-qtdeclarative
+arch="all !armhf !s390x" # blocked by plasma-desktop
 url="https://store.kde.org/p/1169519/"
 pkgdesc="A dock based on Plasma Frameworks"
 license="LGPL-2.0-or-later AND GPL-2.0-or-later"
