community/libphonenumber: disable CMake None build type (hotfix)
Already tried getting this to work with the None build type but failed.
To unblock the builders lets just temporarily switch to a different
build type for now. This is not intended to be a long term solution.

--- a/community/libphonenumber/APKBUILD
+++ b/community/libphonenumber/APKBUILD
@@ -15,8 +15,9 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/googlei18n/libphonenumber/ar
 
 build() {
 	cd "$builddir/cpp"
+	# TODO: Switch to the CMake None build type.
 	cmake \
-		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_BUILD_TYPE=MinSizeRel \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
 	make
