testing/librtlsdr: fix build with -Os

--- a/testing/librtlsdr/APKBUILD
+++ b/testing/librtlsdr/APKBUILD
@@ -10,19 +10,19 @@ license="GPL-2.0"
 depends_dev="libusb-dev"
 makedepends="$depends_dev cmake"
 subpackages="$pkgname-dev rtl-sdr:tools"
-source="$pkgname-$pkgver.tar.gz::https://github.com/steve-m/$pkgname/archive/v$pkgver.tar.gz"
-
+source="$pkgname-$pkgver.tar.gz::https://github.com/steve-m/$pkgname/archive/v$pkgver.tar.gz
+	0001-Fix-inline-functions-to-use-static-inline.patch"
 builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
 	cd "$builddir"
 	mkdir -p build
 	cd build
-	cmake -DCMAKE_BUILD_TYPE=None \
+	CFLAGS="" LDFLAGS="" cmake -DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX:PATH=/usr \
 		-DDETACH_KERNEL_DRIVER=ON \
 		-Wno-dev ..
-	make
+	make VERBOSE=1
 }
 
 package() {
@@ -36,4 +36,5 @@ tools() {
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr/
 }
 
-sha512sums="81d01ccced763d728b4bb1aeff4bc04c394d4d6906f1df5c8b83671769bb4ca551017fea680981431a9e9436644a765b049259e42fcec1be8b709a81daf420ea  librtlsdr-0.5.4.tar.gz"
+sha512sums="81d01ccced763d728b4bb1aeff4bc04c394d4d6906f1df5c8b83671769bb4ca551017fea680981431a9e9436644a765b049259e42fcec1be8b709a81daf420ea  librtlsdr-0.5.4.tar.gz
+87bd0f0347f2d7ef480a73b6c2915d4da0879815c77e8e2a236edff95ddd571b956625f7adc7cde995ceca46bf4b93ed92e6dac94f90195f832066baf6c1f616  0001-Fix-inline-functions-to-use-static-inline.patch"
