testing/mongo-cxx-driver: fix build in `abuild rootbld`
This also causes a change of the soname, however, no packages seem to
depend on this package.

--- a/testing/mongo-cxx-driver/APKBUILD
+++ b/testing/mongo-cxx-driver/APKBUILD
@@ -33,6 +33,7 @@ build() {
 		-DCMAKE_C_FLAGS="$CFLAGS" \
 		-DCMAKE_CXX_STANDARD=17 \
 		-DBSONCXX_POLY_USE_STD=ON \
+		-DBUILD_VERSION="$pkgver" \
 		${CMAKE_CROSSOPTS} ..
 	make
 }
