testing/mongo-cxx-driver: add dependency on zstd-dev
Fails with:

	No rule to make target '/usr/lib/libzstd.so',
	needed by 'src/mongocxx/libmongocxx.so.0.0.0'.

otherwise.

--- a/testing/mongo-cxx-driver/APKBUILD
+++ b/testing/mongo-cxx-driver/APKBUILD
@@ -8,7 +8,7 @@ pkgdesc="C++ driver for MongoDB"
 url="http://mongocxx.org/"
 arch="all"
 license="Apache-2.0"
-makedepends="cmake mongo-c-driver-dev libbson-dev openssl-dev python3 snappy-dev"
+makedepends="cmake mongo-c-driver-dev libbson-dev openssl-dev python3 snappy-dev zstd-dev"
 subpackages="$pkgname-dev:_dev libbsoncxx libbsoncxx-dev"
 source="mongo-cxx-driver-$pkgver.tar.gz::https://github.com/mongodb/mongo-cxx-driver/archive/$_commit.tar.gz
 	01-dont-build-mongo-tests.patch"
