--- a/community/xerces-c/APKBUILD
+++ b/community/xerces-c/APKBUILD
@@ -2,21 +2,14 @@
 # Maintainer: Andrew Bell <andrew.bell.ia@gmail.com>
 pkgname=xerces-c
 pkgver=3.2.2
-pkgrel=3
+pkgrel=4
 pkgdesc="A validating XML parser written in a portable subset of C++"
 url="https://xerces.apache.org/index.html"
 arch="all"
 license="Apache-2.0"
-makedepends="
-	cmake
-	curl-dev
-	icu-dev
-	"
+makedepends="cmake curl-dev	icu-dev"
 subpackages="$pkgname-samples $pkgname-doc $pkgname-dev"
-_pkgver=${pkgver//./_}
-_srcname="Xerces-C_$_pkgver"
-source="https://github.com/apache/xerces-c/archive/$_srcname.tar.gz"
-builddir="$srcdir/$pkgname-$_srcname"
+source="$pkgname-$pkgver.tar.gz::https://github.com/apache/xerces-c/archive/v$pkgver.tar.gz"
 
 build() {
 	mkdir build && cd build
@@ -53,4 +46,5 @@ check() {
 	cd "$builddir"/build
 	ctest
 }
-sha512sums="66f60fe9194376ac0ca99d13ea5bce23ada86e0261dde30686c21ceb5499e754dab8eb0a98adadd83522bda62709377715501f6dac49763e3a686f9171cc63ea  Xerces-C_3_2_2.tar.gz"
+
+sha512sums="e4b2d3499fb4d1d1bcaf991ee858f352112683084b9cc7855c0e52e7fc8cc982a8e3cd548fa30718af6a6dee40e460d82ffcd3480a50f7e7516b462b2c2080c6  xerces-c-3.2.2.tar.gz"
