testing/libquotient: disable on armhf

--- a/testing/libquotient/APKBUILD
+++ b/testing/libquotient/APKBUILD
@@ -9,7 +9,7 @@ pkgrel=1
 pkgdesc="Qt5 library for cross-platform clients for Matrix"
 options="!check" # No testsuite
 url="https://github.com/quotient-im/libQuotient"
-arch="all"
+arch="all !armhf" # blocked by qt5-qtmultimedia
 license="LGPL-2.1-or-later"
 depends_dev="qt5-qtbase-dev qt5-qtmultimedia-dev"
 makedepends="$depends_dev cmake"
