community/atools: fix url

--- a/community/atools/APKBUILD
+++ b/community/atools/APKBUILD
@@ -2,9 +2,9 @@
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=atools
 pkgver=18.12.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Auxilary scripts for abuild"
-url="https://github.com/maxice8/atools"
+url="https://gitlab.alpinelinux.org/Leo/atools"
 arch="noarch"
 license="MIT"
 depends="grep lua5.3 lua5.3-lyaml"
