community/rippled: fix build with `abuild rootbld`

--- a/community/rippled/APKBUILD
+++ b/community/rippled/APKBUILD
@@ -10,6 +10,7 @@ arch="x86_64"
 license="ISC"
 makedepends="cmake openssl-dev boost-dev protobuf-dev"
 subpackages="$pkgname-doc"
+options="net"
 source="$pkgname-$pkgver.tar.gz::https://github.com/ripple/rippled/archive/$pkgver.tar.gz
 	boost-1.71.patch
 	disable-failing-test.patch
