main/pstree: conflict with psmisc

--- a/main/pstree/APKBUILD
+++ b/main/pstree/APKBUILD
@@ -2,15 +2,12 @@
 # Maintainer: Sören Tempel <soeren+alpine@soeren-tempel.net>
 pkgname=pstree
 pkgver=2.39
-pkgrel=0
+pkgrel=1
 pkgdesc="A small tool to list processes as a tree"
 url="http://www.thp.uni-duisburg.de/pstree/"
 arch="all"
 license="GPL"
-depends=""
-depends_dev=""
-makedepends=""
-install=""
+depends="!psmisc" # also provides pstree
 subpackages="$pkgname-doc"
 source="ftp://ftp.thp.uni-duisburg.de/pub/source/$pkgname-$pkgver.tar.gz"
 
