--- a/community/rippled/APKBUILD
+++ b/community/rippled/APKBUILD
@@ -17,7 +17,8 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/ripple/rippled/archive/$pkgv
 
 build() {
 	mkdir build && cd build
-	cmake .. -Dstatic=OFF -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=None
+	# Use Release as buildtype for now: its subprojects don't support None either
+	cmake .. -Dstatic=OFF -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release
 	cmake --build .
 }
 
