testing/shiboken2: disable on armhf due to qt5-qtdeclarative

--- a/testing/shiboken2/APKBUILD
+++ b/testing/shiboken2/APKBUILD
@@ -6,7 +6,7 @@ pkgver=5.12.5
 pkgrel=3
 pkgdesc="CPython bindings generator for C++ libraries"
 url="https://wiki.qt.io/Qt_for_Python/Shiboken"
-arch="all"
+arch="all !armhf" # qt5-qtxmlpatterns -> qt5-qtdeclarative
 license="GPL-2.0-or-later"
 depends_dev="python3-dev"
 makedepends="
