--- a/community/alsa-plugins/APKBUILD
+++ b/community/alsa-plugins/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Taner Tas <taner76@gmail.com>
 pkgname=alsa-plugins
 pkgver=1.2.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Advanced Linux Sound Architecture (ALSA) plugins"
 url="https://www.alsa-project.org"
 arch="all"
@@ -60,6 +60,7 @@ lavrate() {
 
 pulse() {
 	pkgdesc="Pulseaudio support plugins for alsa-only applications"
+	install_if="alsa-lib pulseaudio"
 	_mv_lib *pulse.so
 	_mv_conf *pulseaudio*
 	mv "$subpkgdir"/etc/alsa/conf.d/99-pulseaudio-default.conf.example \
