testing/tarantool: disable (dependencies no longer packaged)
Fails with:

	ERROR: unsatisfiable constraints:
	  py2-argparse (missing):
	    required by: .makedepends-tarantool-20200222.141459[py2-argparse]
	  py2-gevent (missing):
	    required by: .makedepends-tarantool-20200222.141459[py2-gevent]
	  py2-msgpack (missing):
	    required by: .makedepends-tarantool-20200222.141459[py2-msgpack]
	  py2-six (missing):
	    required by: .makedepends-tarantool-20200222.141459[py2-six]
	  py2-yaml (missing):
	    required by: .makedepends-tarantool-20200222.141459[py2-yaml]

--- a/testing/tarantool/APKBUILD
+++ b/testing/tarantool/APKBUILD
@@ -11,7 +11,7 @@ url="https://tarantool.org"
 # armhf: zstd not available (fails to build)
 # ppc64le: not supported by LuaJIT w/o patches
 # s390x: not supported by LuaJIT
-arch="x86_64"
+arch=""
 license="BSD-2-Clause MIT Public-Domain"
 pkgusers="$pkgname"
 pkggroups="$pkgname"
