community/multirun: upgrade to 1.0.0

--- a/community/multirun/APKBUILD
+++ b/community/multirun/APKBUILD
@@ -1,25 +1,36 @@
 # Contributor: TBK <alpine@jjtc.eu>
 # Maintainer: TBK <alpine@jjtc.eu>
 pkgname=multirun
-pkgver=0.3.2
+pkgver=1.0.0
 pkgrel=0
 pkgdesc="A minimalist init process designed for Docker."
 url="https://nicolas-van.github.io/multirun/"
 arch="all"
 license="MIT"
+makedepends="cmake"
 checkdepends="bats"
 source="$pkgname-$pkgver.tar.gz::https://github.com/nicolas-van/multirun/archive/$pkgver.tar.gz"
 
 build() {
+	if [ "$CBUILD" != "$CHOST" ]; then
+		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
+	fi
+	cmake \
+		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
+		-DCMAKE_C_FLAGS="$CFLAGS" \
+		${CMAKE_CROSSOPTS} .
 	make
 }
 
 check() {
-	make test
+	bats tests.bats
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	# make DESTDIR="$pkgdir" install # Should be available with next release
+	install -m750 -D $pkgname "$pkgdir/usr/bin/$pkgname"
 }
 
-sha512sums="5c47f0122d382941226cbd1cc515bf9d5f3122199dc90f87eb7a745ac1061ec80a76cb7116faf1cd7fdc249a17ef9f339197ded631d2abf9a0ea41c89e411801  multirun-0.3.2.tar.gz"
+sha512sums="4e0987cfeccc6fe2b782271166252c90fb7066e69e7e148bc6e5030a2ba35050790acb9297aa2e4bd319f6ae0ce406fc841dda59b209e4a15d8ec38a121ceffb  multirun-1.0.0.tar.gz"
