--- a/testing/trojita/APKBUILD
+++ b/testing/trojita/APKBUILD
@@ -4,7 +4,7 @@ pkgname=trojita
 pkgver=0.7_git20190618
 pkgrel=1
 _commit="90b417b131853553c94ff93aef62abaf301aa8f1"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtwebkit
 url="http://trojita.flaska.net/"
 pkgdesc="A fast and lightweight IMAP e-mail client designed with standard-compliance in mind "
 license="GPL-2.0-only OR GPL-3.0-only"
