testing/konversation: attempt to fix build with recent Qt

--- a/testing/konversation/APKBUILD
+++ b/testing/konversation/APKBUILD
@@ -13,7 +13,8 @@ makedepends="extra-cmake-modules qt5-qtbase-dev karchive-dev kbookmarks-dev
 	kparts-dev solid-dev kwallet-dev kwidgetsaddons-dev kglobalaccel-dev
 	kdbusaddons-dev knotifications-dev kwindowsystem-dev kiconthemes-dev
 	kitemviews-dev phonon-dev qca-dev"
-source="https://download.kde.org/stable/$pkgname/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/$pkgname/$pkgver/src/$pkgname-$pkgver.tar.xz
+	0001-Fix-build-with-Qt-5.13.patch"
 subpackages="$pkgname-doc $pkgname-lang"
 
 build() {
@@ -32,4 +33,5 @@ package() {
 	DESTDIR="$pkgdir" make install
 }
 
-sha512sums="001534c7f6c5110ca5e210977cc4275e083f5c3704078a74aa573af659154e0fa4c3c960be08f41256db1ac4568f0734741bf10cfb2e15d9e6f6440250682504  konversation-1.7.5.tar.xz"
+sha512sums="001534c7f6c5110ca5e210977cc4275e083f5c3704078a74aa573af659154e0fa4c3c960be08f41256db1ac4568f0734741bf10cfb2e15d9e6f6440250682504  konversation-1.7.5.tar.xz
+20e7626721286194ee036d64bdb5faae1b774bc19a3958f221c03e3269b0d4ce6e768d6e4ee7c2db1ec9502ac2be202184cb842d072f321422664d62f56212ec  0001-Fix-build-with-Qt-5.13.patch"
