testing/quaternion: disable on armhf

--- a/testing/quaternion/APKBUILD
+++ b/testing/quaternion/APKBUILD
@@ -6,7 +6,7 @@ pkgrel=1
 pkgdesc="Qt5-based IM client for Matrix"
 options="!check" # No testsuite
 url="https://github.com/QMatrixClient/Quaternion"
-arch="all"
+arch="all !armhf" # armhf blocked by qt5-qtmultimedia
 license="GPL-3.0-or-later"
 depends="qt5-qtquickcontrols2 qt5-qtquickcontrols"
 makedepends="cmake qt5-qttools-dev qt5-qtquickcontrols2-dev qt5-qtmultimedia-dev
