testing/librtlsdr: remove debugging leftovers
Accidentally committed in 8205a5f34fd0b0b775acccce589f87942ae67254.

--- a/testing/librtlsdr/APKBUILD
+++ b/testing/librtlsdr/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jared Szechy <jared.szechy@gmail.com>
 pkgname=librtlsdr
 pkgver=0.5.4
-pkgrel=1
+pkgrel=2
 pkgdesc="Software defined radio receiver for Realtek RTL2832U"
 url="https://osmocom.org/projects/sdr/wiki/rtl-sdr"
 arch="all"
@@ -18,11 +18,11 @@ build() {
 	cd "$builddir"
 	mkdir -p build
 	cd build
-	CFLAGS="" LDFLAGS="" cmake -DCMAKE_BUILD_TYPE=None \
+	cmake -DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX:PATH=/usr \
 		-DDETACH_KERNEL_DRIVER=ON \
 		-Wno-dev ..
-	make VERBOSE=1
+	make
 }
 
 package() {
