testing/inadyn: upgrade to 2.6

--- a/testing/inadyn/APKBUILD
+++ b/testing/inadyn/APKBUILD
@@ -1,22 +1,21 @@
 # Contributor: TBK <alpine@jjtc.eu>
 # Maintainer: TBK <alpine@jjtc.eu>
 pkgname=inadyn
-pkgver=2.5
+pkgver=2.6
 pkgrel=0
 pkgdesc="Dynamic DNS client with TLS support"
-url="http://troglobit.com/projects/inadyn"
+url="https://troglobit.com/projects/inadyn"
 arch="all"
 license="GPL-2.0-or-later"
 options="!check" # not test suite
 depends="ca-certificates"
 makedepends="confuse-dev gnutls-dev"
 subpackages="$pkgname-doc"
-source="https://github.com/troglobit/inadyn/releases/download/v$pkgver/$pkgname-$pkgver.tar.gz"
+source="https://github.com/troglobit/inadyn/releases/download/v$pkgver/inadyn-$pkgver.tar.gz"
 
 build() {
 	./configure \
-		--prefix=/usr \
-		--exec-prefix=/usr
+		--prefix=/usr
 	make
 }
 
@@ -24,4 +23,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="885d05fdf70067a0e34899026300185a47f94e49ffe0cbbb7d07b17c80bd4cb2d2a9b35af4466b0dcc7949c59224d424f95e5afb9d31310db4ddacb90ca2475a  inadyn-2.5.tar.gz"
+sha512sums="1f3a7e4cbb7d6f4442eb521ba6d7a12dacefa20305ae4252a2cfacba03ba6a61b10862bbfd1a9c26042278cac93a423b63a27004aaca75ddea008a1ada601a1e  inadyn-2.6.tar.gz"
