--- a/testing/clipman/APKBUILD
+++ b/testing/clipman/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Galen Abell <galen@galenabell.com>
 # Maintainer: Galen Abell <galen@galenabell.com>
-pkgname="clipman"
-pkgver="1.2.0"
+pkgname=clipman
+pkgver=1.3.0
 pkgrel=0
 pkgdesc="A simple clipboard manager for Wayland"
 url="https://github.com/yory8/clipman"
@@ -10,6 +10,7 @@ license="GPL-3.0-only"
 depends="wl-clipboard"
 makedepends="go"
 options="!check" # no tests
+subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/yory8/clipman/archive/v$pkgver.tar.gz"
 
 build() {
@@ -18,5 +19,6 @@ build() {
 
 package() {
 	install -Dm755 $pkgname "$pkgdir"/usr/bin/$pkgname
+	install -Dm644 docs/clipman.1 -t "$pkgdir"/usr/share/man/man1
 }
-sha512sums="677652bc21b8b6d800c615d3ffc70fa934b8d934d430eec5f0baf262822092a138e4514c01415eae4584dbbc30c33d147a54f5ba06b1e2f468ae984769ddcfd1  clipman-1.2.0.tar.gz"
+sha512sums="2e7d9345c5410f41967d2e9605a2151c1b9f8bfc47286957ce8698edb1ac8128a3cb0780eae746d0a999d79ecead5ea0fe7f37a3a1e0a0430efe0c7e3fc7a8a4  clipman-1.3.0.tar.gz"
