--- a/main/ed/APKBUILD
+++ b/main/ed/APKBUILD
@@ -1,20 +1,16 @@
 # Maintainer: Breno Leitao <breno.leitao@gmail.com>
 pkgname=ed
-pkgver=1.15
+pkgver=1.16
 pkgrel=0
 pkgdesc="GNU ed is a line-oriented text editor. It is used to create, display, modify and otherwise manipulate text files"
 url="https://www.gnu.org/software/ed/"
 arch="all"
-license="GPL"
-depends=""
-makedepends=""
+license="GPL-3.0-only"
 subpackages="$pkgname-doc"
-source="https://ftp.gnu.org/gnu/$pkgname/$pkgname-$pkgver.tar.lz"
+source="https://ftp.gnu.org/gnu/ed/ed-$pkgver.tar.lz"
 
-builddir=$srcdir/$pkgname-$pkgver
 
 build() {
-	cd "$builddir"
 	# bindir needs correspond with busybox location
 	./configure \
 		--build=$CBUILD \
@@ -26,13 +22,11 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="27a16db41e88626b9718b1868f2fc629b609e436aca2450846f87492c61bf60cec3db0c54ff9a421d9bcbf59fe91a8c672aee5772e1b1eec8a365f227c30ecba  ed-1.15.tar.lz"
+sha512sums="1ca999edd7007c56bf9aa91436997a813e665910dda19a3307fa5b85adc05667eb120cb54cb6544b919f1c7f631baf3ee03079abe1171b875fb9653f535fa7bd  ed-1.16.tar.lz"
