testing/py3-humanize: upgrade to 1.0.0

--- a/testing/py3-humanize/APKBUILD
+++ b/testing/py3-humanize/APKBUILD
@@ -2,15 +2,15 @@
 # Maintainer: Thomas Boerger <thomas@webhippie.de>
 pkgname=py3-humanize
 _pkgname=humanize
-pkgver=0.5.1
-pkgrel=5
+pkgver=1.0.0
+pkgrel=0
 pkgdesc="Python humanize functions"
 url="https://pypi.python.org/pypi/humanize"
 arch="noarch"
 license="MIT"
 depends="python3"
-makedepends="py3-setuptools"
-checkdepends="py3-mock"
+makedepends="py3-setuptools py3-setuptools_scm"
+checkdepends="py3-mock py3-freezegun"
 source="$_pkgname-$pkgver.tar.gz::https://github.com/jmoiron/humanize/archive/$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
 
@@ -18,6 +18,7 @@ replaces=py-humanize # Backwards compatibility
 provides=py-humanize=$pkgver-r$pkgrel # Backwards compatibility
 
 build() {
+	git init
 	python3 setup.py build
 }
 
@@ -29,4 +30,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="dd7ad7f3c564cc6abcb6b128e50dbea7f19f7f418bfd936aae2472961c53ec71202133c5c2b5b930ef41ef807b51d6ba1210565627ed32c0b41acc0abd32a2d5  humanize-0.5.1.tar.gz"
+sha512sums="bf8ec28e3e109a5a7c98c8fd515e3285c960bb532a672b2cc43998922e48a151baf3bada977f18affe4d5d1873ff7724f6eb024f5b2e860efa57a43a08924521  humanize-1.0.0.tar.gz"
