testing/shairport-sync: upgrade to 3.3.6

--- a/testing/shairport-sync/APKBUILD
+++ b/testing/shairport-sync/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer:
 pkgname=shairport-sync
-pkgver=3.3.5
+pkgver=3.3.6
 pkgrel=0
 pkgdesc="AirTunes emulator. Shairport Sync adds multi-room capability with Audio Synchronisation"
 url="https://github.com/mikebrady/shairport-sync"
@@ -11,7 +11,7 @@ depends="avahi"
 makedepends="autoconf automake libtool alsa-lib-dev popt-dev
 	openssl-dev soxr-dev avahi-dev libconfig-dev xmltoman"
 subpackages="$pkgname-doc $pkgname-openrc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/mikebrady/$pkgname/archive/$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/mikebrady/shairport-sync/archive/$pkgver.tar.gz
 	$pkgname.initd"
 options=!check
 
@@ -42,5 +42,5 @@ package() {
 	install -m 755 -D "$srcdir"/$pkgname.initd "$pkgdir"/etc/init.d/$pkgname
 }
 
-sha512sums="6e99a442a3de02ca5be8a2b65d9a559f79ecf04e73be9f6a85e0b2033f66c453f8e48ac5fe399e0d6766e181b0a6dcb629815ce2130d3cc8fb6167aab3bf8d79  shairport-sync-3.3.5.tar.gz
+sha512sums="225c82307259a4ba9780ca04bdf77eb32688324fc2fd9059ae4f167de3afbe66f1d8f4a4a1d0a3c26bd6d54cc056f04481cfb9317c696469601f7f67108d0362  shairport-sync-3.3.6.tar.gz
 aeead51ef0f17d360bb1e2d2ae897974ef507ef56db84e6aeb79d8ec522c3bb9336f01ff4150e70fecfebf9808dd7190cb2839e287cf0ef6e1886504c1f1edc6  shairport-sync.initd"
