--- a/main/tcl/APKBUILD
+++ b/main/tcl/APKBUILD
@@ -1,28 +1,27 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Carlo Landmeter <clandmeter@gmail.com>
 pkgname=tcl
-pkgver=8.6.9
+pkgver=8.6.10
 pkgrel=0
 pkgdesc="The Tcl scripting language"
 url="http://tcl.sourceforge.net/"
 arch="all"
 license="TCL"
-depends=""
 depends_dev="tcl"
 makedepends="zlib-dev sqlite-dev"
 subpackages="$pkgname-doc $pkgname-dev"
-source="https://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname$pkgver-src.tar.gz
+source="https://downloads.sourceforge.net/sourceforge/tcl/tcl$pkgver-src.tar.gz
 	tcl-stat64.patch
 	"
 
 _major=${pkgver%.*}
-builddir="$srcdir"/tcl${pkgver}/unix
+builddir="$srcdir"/tcl$pkgver/unix
 
 prepare() {
-	cd "$srcdir"/tcl${pkgver}
+	cd "$srcdir"/tcl$pkgver
 	for i in $source; do
 		case $i in
-		*.patch) msg "$i"; patch -p1 -i "$srcdir"/$i || return 1;;
+		*.patch) msg "$i"; patch -p1 -i "$srcdir"/$i ;;
 		esac
 	done
 	rm -r pkgs/sqlite3*
@@ -33,7 +32,6 @@ build() {
 	case "$CARCH" in
 		x86_64) _64bit="--enable-64bit";;
 	esac
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -47,20 +45,17 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	export LD_LIBRARY_PATH="$_builddir"
-	make -j1 INSTALL_ROOT="${pkgdir}" install install-private-headers
+	make -j1 INSTALL_ROOT="$pkgdir" install install-private-headers
 
-	ln -sf tclsh${_major} "${pkgdir}"/usr/bin/tclsh
-	install -Dm644 ../license.terms ${pkgdir}/usr/share/licenses/${pkgname}/LICENSE
+	ln -sf tclsh${_major} "$pkgdir"/usr/bin/tclsh
+	install -Dm644 ../license.terms $pkgdir/usr/share/licenses/$pkgname/LICENSE
 
 	# remove buildroot traces
 	find "$pkgdir" -name '*Config.sh' | xargs sed -i -e "s#${srcdir}#/usr/src#"
 }
 
 check() {
-	cd "$builddir"
-
 	# thread-4.5 and thread-5* is suppressed because it tests UB
 	# http* is suppressed because it tries to do network i/o
 	# unixInit-3* is suppressed due to hardcoded locale assumptions
@@ -72,9 +67,9 @@ dev() {
 	cd $pkgdir
 	for i in $(find . -name '*.c' -o -name '*Config.sh'); do
 		mkdir -p "$subpkgdir"/${i%/*}
-		mv $i "$subpkgdir"/${i%/*}/ || return 1
+		mv $i "$subpkgdir"/${i%/*}/
 	done
 }
 
-sha512sums="707fc0fb4f45c85e8f21692e5035d727cde27d87a2e1cd2e748ad373ebd3517aeca25ecaef3382a2f0e0a1feff96ce94a62b87abcf085e1a0afe2a23ef460112  tcl8.6.9-src.tar.gz
+sha512sums="c89b886e483320a284033de51b5363758ef4748d6248ae73eb8e90fbe76c180395f485135ca9bf1246dd567159a77ffc1e8cb537bc2fc4a09b01448928d0afd7  tcl8.6.10-src.tar.gz
 cd52cbe80fd2be227c9018dbe38fa0888302293402e7a57f2e231c195b7c1902f1b58bc87d19c9d123915ca757e871abf084c0ef23b1a7f187bc03ba93904cc2  tcl-stat64.patch"
