community/bcc: upgrade to 0.13.0

--- a/community/bcc/APKBUILD
+++ b/community/bcc/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Adam Jensen <acjensen@gmail.com>
 pkgname=bcc
-pkgver=0.12.0
-pkgrel=2
+pkgver=0.13.0
+pkgrel=0
 pkgdesc="A toolkit for creating efficient kernel tracing and manipulation programs"
 url="https://github.com/iovisor/bcc/"
 arch="aarch64 x86 x86_64"
@@ -11,11 +11,10 @@ options="!check"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc:_doc $pkgname-tools:_tools $pkgname-lua:_lua py3-$pkgname:_py:noarch"
 _llvmver=9
 makedepends="tar git llvm$_llvmver-dev llvm$_llvmver-static clang-dev clang-static cmake
-	python3 flex-dev bison luajit-dev build-base iperf linux-headers elfutils-dev zlib-dev
-	libbpf-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/iovisor/bcc/archive/v$pkgver.tar.gz
-	10-use-system-libbpf.patch
-	20-install-static.patch"
+	python3 flex-dev bison luajit-dev build-base iperf linux-headers elfutils-dev zlib-dev"
+source="$pkgname-$pkgver.tar.gz::https://github.com/iovisor/bcc/releases/download/v$pkgver/bcc-src-with-submodule.tar.gz
+	10-include-stddef.patch"
+builddir="$srcdir/$pkgname"
 
 prepare() {
 	rm -rf tests/* && touch tests/CMakeLists.txt
@@ -25,8 +24,7 @@ prepare() {
 }
 
 build() {
-	mkdir -p "$builddir/build"
-	cd "$builddir/build"
+	mkdir build && cd build
 	cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr \
 		-DCMAKE_INSTALL_LIBDIR=/usr/lib \
 		-DPYTHON_CMD=python3 \
@@ -73,6 +71,5 @@ _lua() {
 	mv "$pkgdir"/usr/bin/bcc-lua "$subpkgdir"/usr/bin
 }
 
-sha512sums="db3ea929b1296f4d9d82d2a11e89e11a1c31512d3f7f935475a7613e0128a5cf9441f3138969535ef41de0c0f677c7446f62f1c64575d41a9896e5339f3f112b  bcc-0.12.0.tar.gz
-caffeea956f6d4b83f63a321eee17c2a12987c99b3c65444fdfeb15e0f6c8927e865358ed2db6bd6736757df007c4c11bd06a5c174884d1542b7ee38b0496b49  10-use-system-libbpf.patch
-c84d08f31fceb9af9c4bfeb0056b2f20c385b8eb44aafa1ab40049586e3b71d38882ca236e9f3fff5a9eebae9c570f56c73cc87966659e71743a5a38a30de388  20-install-static.patch"
+sha512sums="9f95f70bbebb3b5e175b2c513a51c024fdbe67283c02b81b56cdef74b1720b82df40a4555c1e1fdcfa56c64cd418abfa11b371e4111ffb3997c848f014690471  bcc-0.13.0.tar.gz
+560b02ce2b2b14e56c63bfc92e0b77782e5f88769be3799cad838d0b8e5e4e8561aefdc3b81f1ac88c12f6fd1f82971482579d90903728ca2ff7e63d4c0217d2  10-include-stddef.patch"
