community/kanshi: move from testing
and update url

--- a/community/kanshi/APKBUILD
+++ b/community/kanshi/APKBUILD
@@ -4,7 +4,7 @@ pkgname=kanshi
 pkgver=1.0.0
 pkgrel=3
 pkgdesc="Dynamic display configuration for Wayland"
-url="https://github.com/emersion/kanshi"
+url="https://wayland.emersion.fr/kanshi/"
 arch="all"
 license="MIT"
 options="!check" # no test suite
