testing/pdal: disable

--- a/testing/pdal/APKBUILD
+++ b/testing/pdal/APKBUILD
@@ -7,7 +7,7 @@ pkgdesc="PDAL is a C++ BSD library for translating and manipulating point cloud 
 url="https://pdal.io"
 # Dependencies libgeotiff-dev, proj-dev, libspatialite-dev, and pcl-dev are
 # not provided on other architectures
-arch="x86_64"
+arch="" # 1 test fail on the only arch that was installed before, x86_64
 license="BSD-2-Clause"
 depends="nitro python3 py3-numpy>=1.14.3-r1"
 makedepends="
