community/libbpf: upgrade to 0.0.7

--- a/community/libbpf/APKBUILD
+++ b/community/libbpf/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Adam Jensen <acjensen@gmail.com>
 pkgname=libbpf
-pkgver=0.0.6
+pkgver=0.0.7
 pkgrel=0
 pkgdesc="A library for interacting with the Linux kernel's Berkeley Packet Filter (BPF) facility from user space"
 url="https://github.com/libbpf/libbpf"
@@ -9,7 +9,7 @@ license="GPL-2.0-only"
 # No test suite
 options="!check"
 depends="elfutils"
-makedepends="build-base linux-headers elfutils-dev"
+makedepends="build-base linux-headers elfutils-dev zlib-dev"
 subpackages="$pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/libbpf/libbpf/archive/v$pkgver.tar.gz
 	10-include-stddef.patch
@@ -26,6 +26,6 @@ package() {
 	cp -R "$builddir/include/uapi" "$pkgdir/usr/include/uapi"
 }
 
-sha512sums="1678133d9a2bd1cf13d4d1f9b83bb3f0642de91e3e3c8d785e2993257035573aff39b9a1a457e73d9c4c1c66b6a52544a8ad06ac560766d335428bb3fc421e71  libbpf-0.0.6.tar.gz
+sha512sums="c2cbc869b7e11339deab3152a6e2d0b3bba25da513d18d77fb0a698cbe61d6bd48175a58e7dd7a3695fbf27faf48b4f517ac5d3a3c66c086df2e5d1b73a2595d  libbpf-0.0.7.tar.gz
 946e445ffa4c5df42ebac77b7a1c6478b37dc7b55e0883aee195c6a8c4f8718b4dbf98b7c6d3016e1619e59440d8e4a76dad1e843114dfe2f9a2610e5cbb7943  10-include-stddef.patch
 26f2b7bee6a11f2c9d4a36b5ee3cd2e85d65f496f0ce9ca49e561f2783ab95b56e23692d5de2364125bbdedd0d5978e884519e7d48131a06077d5578a4504b4a  20-consolidate-lib-dirs.patch"
