testing/shfmt: upgrade to 3.0.2

--- a/testing/shfmt/APKBUILD
+++ b/testing/shfmt/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Olliver Schinagl <oliver@schinagl.nl>
 # Maintainer: Olliver Schinagl <oliver@schinagl.nl>
-pkgname="shfmt"
-pkgver=3.0.1
+pkgname=shfmt
+pkgver=3.0.2
 pkgrel=0
 pkgdesc="A shell parser, formatter, and interpreter (sh/bash/mksh)"
 url="https://mvdan.cc/sh"
@@ -24,4 +24,4 @@ package() {
 		"$builddir"/shfmt
 }
 
-sha512sums="751a79c0e0da298613c135be1142a0ea34973467bb7db340ec756f4bd97daf09af459d97f43911804e19b2643b9ee78c607544bca7b8561d75acb374d2f533cf  shfmt-3.0.1.tar.gz"
+sha512sums="1f513b4629a472a08c4dbc5d788b4cd619197e27a5814de0ac8863629ed5598a715b7106a59fda2c64725c4f896a2c0889c1522b92324d0c1cfc80596d237fd4  shfmt-3.0.2.tar.gz"
