testing/commons-daemon: upgrade to 1.2.2

--- a/testing/commons-daemon/APKBUILD
+++ b/testing/commons-daemon/APKBUILD
@@ -1,23 +1,25 @@
 # Contributor: TBK <alpine@jjtc.eu>
 # Maintainer: TBK <alpine@jjtc.eu>
 pkgname=commons-daemon
-pkgver=1.1.0
+pkgver=1.2.2
 pkgrel=0
 pkgdesc="Tools to allow Java programs to run as UNIX daemons."
 url="https://commons.apache.org/daemon/"
 arch="all"
 license="Apache-2.0"
-options="!check" # can't get "ant test" to work correctly
+options="!check" # No test suite
 depends="openjdk8-jre-base"
-makedepends="apache-ant docbook2x linux-headers openjdk8" # update --with-java when bumping openjdk
+makedepends="docbook2x libcap-dev linux-headers maven openjdk8" # update --with-java when bumping openjdk
 subpackages="$pkgname-doc jsvc:_jsvc jsvc-doc:_jsvc_doc"
-source="http://mirrors.dotsrc.org/apache/commons/daemon/source/commons-daemon-$pkgver-src.tar.gz"
+source="https://mirrors.dotsrc.org/apache/commons/daemon/source/commons-daemon-$pkgver-src.tar.gz
+	rat_workaround.patch
+	"
 builddir="$srcdir/$pkgname-$pkgver-src"
 
 build() {
-	# commons-daemon.jar + docs
-	ant -Dcompile.source=1.6 -Dcompile.target=1.6 jar javadoc
-	
+	# commons-daemon.jar
+	mvn install -DskipTests=true -Dmaven.javadoc.skip=false -B
+
 	# jsvc
 	cd "$builddir/src/native/unix"
 	./configure \
@@ -34,7 +36,7 @@ build() {
 }
 
 package() {
-	install -Dm644 dist/$pkgname-$pkgver.jar \
+	install -Dm644 target/$pkgname-$pkgver.jar \
 		"$pkgdir"/usr/share/java/$pkgname-$pkgver.jar
 	ln -s $pkgname-$pkgver.jar "$pkgdir"/usr/share/java/$pkgname.jar
 }
@@ -43,7 +45,6 @@ doc() {
 	default_doc
 
 	mkdir -p "$subpkgdir"/usr/share/doc/$pkgname
-	cp -a "$builddir"/dist/docs/* "$subpkgdir"/usr/share/doc/$pkgname/
 	cp -a "$builddir"/src/docs/* "$subpkgdir"/usr/share/doc/$pkgname/
 	cp -a "$builddir"/src/samples "$subpkgdir"/usr/share/doc/$pkgname/
 }
@@ -52,7 +53,7 @@ _jsvc() {
 	pkgdesc="Executes classfile that implements a Daemon interface."
 	url="https://commons.apache.org/proper/commons-daemon/jsvc.html"
 	depends="$pkgname libcap"
-	
+
 	cd "$builddir/src/native/unix"
 	install -Dm755 jsvc "$subpkgdir"/usr/bin/jsvc
 }
@@ -62,4 +63,5 @@ _jsvc_doc() {
 	install -Dm644 jsvc.1.gz "$subpkgdir"/usr/share/man/man1/jsvc.1.gz
 }
 
-sha512sums="a370085a991cd6b121fcfb49822660dfc0aac19f164677dd2e6373750c1a526ef5a10334a8e075fd965c038198f6638b9e9130b5b13256f4a23a6c5a29959701  commons-daemon-1.1.0-src.tar.gz"
+sha512sums="aea5e25f1152be2f8855e98191d243daff97e02eb0dcb72a0ca681c2ec42f42dda038af3496e2fc9623d6d9982d63e4403149ee231745f42605a7a575ebc8cc3  commons-daemon-1.2.2-src.tar.gz
+1ede66e199e82bb788280159be238fba5d1e405c6f01b8123486397f5cc010b48df023c6a799a53de3e09c128a69842c4c2ff5adf735f0ae253ccec4eac28a5d  rat_workaround.patch"
