community/libfreehand: fix build

--- a/community/libfreehand/APKBUILD
+++ b/community/libfreehand/APKBUILD
@@ -7,15 +7,14 @@ pkgdesc="Import filter and tools for Adobe FreeHand documents"
 url="https://wiki.documentfoundation.org/DLP/Libraries/libfreehand"
 arch="all"
 license="MPL-2.0"
-depends=""
 depends_dev="libxml2-dev lcms2-dev icu-dev"
 makedepends="$depends_dev gperf perl doxygen librevenge-dev zlib-dev"
-install=""
 subpackages="$pkgname-dev $pkgname-doc $pkgname-tools"
-source="https://dev-www.libreoffice.org/src/$pkgname/$pkgname-$pkgver.tar.xz
-	parentheses-gcc8-fix.patch"
+source="https://dev-www.libreoffice.org/src/libfreehand/libfreehand-$pkgver.tar.xz
+	parentheses-gcc8-fix.patch
+	fix-build.patch
+	"
 
-builddir="$srcdir/$pkgname-$pkgver"
 
 prepare() {
 	default_prepare
@@ -23,7 +22,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	export CXXFLAGS="$CXXFLAGS -Wno-error=deprecated-copy"
 	./configure \
 		--build=$CBUILD \
@@ -37,12 +35,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
@@ -52,4 +48,5 @@ tools() {
 }
 
 sha512sums="4112a76ac99999801d97d1b282596d631d8496a5bf65778ab26aa06da86637b1e2b630648a67ea01bf3316ecec9f2715546baff27af090b900267c87a011b963  libfreehand-0.1.2.tar.xz
-af4e1fd4fa75a5d45bd9072abc934a0f1d86e0a6d1deaca955bb18bd8ba0f78cd20e0f442e61c52587264ec828ec46a711e0f463fa152e5a1968ac0c5af822f3  parentheses-gcc8-fix.patch"
+af4e1fd4fa75a5d45bd9072abc934a0f1d86e0a6d1deaca955bb18bd8ba0f78cd20e0f442e61c52587264ec828ec46a711e0f463fa152e5a1968ac0c5af822f3  parentheses-gcc8-fix.patch
+d55fba47de11ee438633b109a6fc5ebba661d448c0082a4d603de18ef4e77fa74385eb344fb787b3009ede5ae64fe6b6ba2e209be4a9cf86683ab21d42c5d3ff  fix-build.patch"
