--- a/community/lua-binaryheap/APKBUILD
+++ b/community/lua-binaryheap/APKBUILD
@@ -11,6 +11,7 @@ arch="noarch"
 license="MIT"
 depends="lua"
 checkdepends="lua-busted"
+provides=""
 source="https://github.com/Tieske/binaryheap.lua/archive/version_$_pkgver/binaryheap.lua-$pkgver.tar.gz"
 builddir="$srcdir/binaryheap.lua-version_$_pkgver"
 
@@ -23,6 +24,7 @@ esac
 _luaversions="5.1 5.2 5.3"
 for _v in $_luaversions; do
 	checkdepends="$checkdepends lua$_v lua$_v-busted"
+	provides="$provides lua$_v-${pkgname#lua-}=$pkgver-r$pkgrel"
 done
 
 prepare() {
