community/knot-resolver: reformat $makedepends and $depends_dev

--- a/community/knot-resolver/APKBUILD
+++ b/community/knot-resolver/APKBUILD
@@ -12,11 +12,29 @@ pkgusers="kresd"
 pkggroups="kresd"
 depends="dns-root-hints dnssec-root lua5.1-sec lua5.1-socket"
 _depends_dnstap="$pkgname=$pkgver-r$pkgrel"
-_depends_dnstap_dev="fstrm-dev protobuf-dev protobuf-c-dev"
 _depends_http="$pkgname=$pkgver-r$pkgrel lua5.1-cqueues lua5.1-http lua5.1-mmdb"
-depends_dev="knot-dev>=2.8.0 libedit-dev libuv-dev>=1.7 luajit-dev>=2.0 $_depends_dnstap_dev"
+_depends_dnstap_dev="fstrm-dev protobuf-dev protobuf-c-dev"
+depends_dev="
+	knot-dev>=2.8.0
+	libedit-dev
+	libuv-dev>=1.7
+	luajit-dev>=2.0
+	$_depends_dnstap_dev
+	"
 depends_static="$pkgname-dev"
-makedepends="$depends_dev bash cmake gnutls-dev libcap-ng-dev lmdb-dev luacheck meson>=0.46 ninja pkgconf py3-flake8"
+makedepends="
+	$depends_dev
+	bash
+	cmake
+	gnutls-dev
+	libcap-ng-dev
+	lmdb-dev
+	luacheck
+	meson>=0.46
+	ninja
+	pkgconf
+	py3-flake8
+	"
 checkdepends="cmocka-dev"
 install="$pkgname.pre-install"
 subpackages="
