testing/faudio: upgrade to 20.02
* Enable on ppc64le since that builds now
* Use tabs instead of spaces for indention

--- a/testing/faudio/APKBUILD
+++ b/testing/faudio/APKBUILD
@@ -1,11 +1,11 @@
 # Contributor: TBK <alpine@jjtc.eu>
 # Maintainer: TBK <alpine@jjtc.eu>
 pkgname=faudio
-pkgver=19.06.07
-pkgrel=1
+pkgver=20.02
+pkgrel=0
 pkgdesc="Accuracy-focused XAudio reimplementation for open platforms"
 url="https://fna-xna.github.io/"
-arch="all !ppc64le"
+arch="all"
 license="Zlib"
 makedepends="cmake ffmpeg-dev sdl2-dev"
 subpackages="$pkgname-dev"
@@ -13,25 +13,25 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/FNA-XNA/FAudio/archive/$pkgv
 builddir="$srcdir/FAudio-$pkgver"
 
 build() {
-    mkdir build && cd build
-    cmake .. \
-        -DCMAKE_BUILD_TYPE=None \
-        -DCMAKE_INSTALL_PREFIX="/usr" \
-        -DCMAKE_INSTALL_LIBDIR=lib \
-        -DCMAKE_INSTALL_INCLUDEDIR=include/FAudio \
-        -DFFMPEG=ON \
-        -DBUILD_TESTS=1
-    make
+	mkdir build && cd build
+	cmake .. \
+		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_INSTALL_PREFIX="/usr" \
+		-DCMAKE_INSTALL_LIBDIR=lib \
+		-DCMAKE_INSTALL_INCLUDEDIR=include/FAudio \
+		-DFFMPEG=ON \
+		-DBUILD_TESTS=1
+	make
 }
 
 check() {
-    cd "$builddir/build"
-    ./faudio_tests
+	cd "$builddir/build"
+	./faudio_tests
 }
 
 package() {
-    cd "$builddir/build"
-    make DESTDIR="$pkgdir" install
+	cd "$builddir/build"
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="9ac26aca314d94e1c9c234022a966026d98dfd1ef27b3720e20f992b674a472d06c5c78d58b6225b994ac869eec7a5ca9e55dd0934fb440e1741f8da969330c8  faudio-19.06.07.tar.gz"
+sha512sums="69995fa1fb9ea41182e47f8143252db517adf4e9dc4a0556c9032af5c867259cc7edc81196b10ef043e6118a2e3687b34368f3ac8ffe9294398c5143b9928476  faudio-20.02.tar.gz"
