main/xvfb-run: upgrade to 1.20.7.3

--- a/main/xvfb-run/APKBUILD
+++ b/main/xvfb-run/APKBUILD
@@ -1,8 +1,9 @@
 # Contributor: TBK <alpine@jjtc.eu>
 # Maintainer: TBK <alpine@jjtc.eu>
 pkgname=xvfb-run
-pkgver=1.20.4
-pkgrel=1
+pkgver=1.20.7.3 # Last digit is Debian's pkgrel
+_pkgver=${pkgver%.*}-${pkgver##*.}
+pkgrel=0
 pkgdesc="A wrapper for the Xvfb command which simplifies the task of running commands."
 url="https://salsa.debian.org/xorg-team/xserver/xorg-server/tree/debian-unstable/debian/local"
 arch="noarch"
@@ -10,8 +11,8 @@ license="GPL-2.0-or-later"
 options="!check" # No test suite
 depends="xvfb coreutils"
 subpackages="$pkgname-doc"
-source="https://salsa.debian.org/xorg-team/xserver/xorg-server/raw/xorg-server-2_$pkgver-1/debian/local/xvfb-run
-	https://salsa.debian.org/xorg-team/xserver/xorg-server/raw/xorg-server-2_$pkgver-1/debian/local/xvfb-run.1
+source="https://salsa.debian.org/xorg-team/xserver/xorg-server/raw/xorg-server-2_$_pkgver/debian/local/xvfb-run
+	https://salsa.debian.org/xorg-team/xserver/xorg-server/raw/xorg-server-2_$_pkgver/debian/local/xvfb-run.1
 	"
 builddir="$srcdir/"
 
@@ -21,4 +22,4 @@ package() {
 }
 
 sha512sums="d6a5f916c9f36d8f7259867a32c358a943a5e2f4d8cfde7866904fb0cb3b3042adf24b409e582dd36c601ba4e1d7c4af1d958a71bfebf029f615e67e055c443f  xvfb-run
-03bdd2ed6dc54fb0b82cc71a1088b7e3f1b5d958b695a3f1dc221f5529ce49d638bc39c7dc3f6b8e435bc482ad630938c5d98fb44b3fcfd1a1f6d95a2a8e0bdf  xvfb-run.1"
+78b2bdf8f6e0e7dfb8974c0387d07cc00bdb6241ff3929ad07bd1c0bb54cf613fb308583d0237aa5e7af36b5643ecb7784731a6ef396f4feef4cfbb90d2e2cc2  xvfb-run.1"
