--- a/community/py3-bleach/APKBUILD
+++ b/community/py3-bleach/APKBUILD
@@ -1,9 +1,10 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=py3-bleach
-pkgver=3.1.0
-pkgrel=1
+pkgver=3.1.1
+pkgrel=0
 pkgdesc="whitelist-based HTML sanitizing library"
+options="!check" # https://github.com/mozilla/bleach/issues/503
 url="https://github.com/mozilla/bleach"
 arch="noarch"
 license="Apache-2.0"
@@ -25,4 +26,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="125e22c27e7064702db3c72f7f9b59caf919d4eedc65111c0a901af22530416595406859d741621d4d6a52234929b820b87204f71f0e07bb46683e677140fed8  py3-bleach-3.1.0.tar.gz"
+sha512sums="2d526455bf5733842f4ba5fa1301497f3e52055eb519ad1bd6f7b44e045e10ec25f5a16b5c78b597df456fb8288256a54c4c72fe7c7b335af912b16830fbb905  py3-bleach-3.1.1.tar.gz"
