--- a/testing/armagetronad/APKBUILD
+++ b/testing/armagetronad/APKBUILD
@@ -1,14 +1,14 @@
 # Maintainer: Díaz Urbaneja Diego <sodomon2@gmail.com>
 # Contributor: Díaz Urbaneja Diego <sodomon2@gmail.com>
 pkgname=armagetronad
-pkgver=0.2.8.3.4
+pkgver=0.2.8.3.5
 pkgrel=0
 pkgdesc="A Tron Clone in 3D."
 url="http://armagetronad.net/"
 arch="all"
 license="GPL-1.0-only"
 makedepends="sdl_image-dev sdl_mixer-dev ftgl-dev libxml2-dev"
-subpackages="$pkgname-doc $pkgname-openrc"
+subpackages="$pkgname-doc"
 options="!check" #the tests are deactivated because the make check has not been declared
 source="https://launchpad.net/armagetronad/${pkgver%.*.*}/$pkgver/+download/armagetronad-$pkgver.src.tar.gz"
 
@@ -42,6 +42,9 @@ build() {
 
 package() {
 	make -j1 DESTDIR="$pkgdir" install
+
+	# The symlinks they install here are not actual openrc scripts
+	rm -rf "$pkgdir"/etc/init.d
 }
 
-sha512sums="b6564a67e37dae095f56fb0b98c5d80e09ea220e7416b549978e3ab4b018eb01026e4a5d339d46aaaf4edc7b5e1d707cf6a172f79ef367414a1c7636f14da234  armagetronad-0.2.8.3.4.src.tar.gz"
+sha512sums="ee3c1be492e3f5e35e29bdefd39a3407272acc8f392030d011162af45834a617715435b32dae1a45f9889455847b629a23f6711eaf901a1f61da84bdf2dbd7e0  armagetronad-0.2.8.3.5.src.tar.gz"
