testing/vtk: fix build

--- a/testing/vtk/APKBUILD
+++ b/testing/vtk/APKBUILD
@@ -17,6 +17,7 @@ source="
 	https://www.vtk.org/files/release/${pkgver%.*}/VTKData-$pkgver.tar.gz
 	https://www.vtk.org/files/release/${pkgver%.*}/VTKLargeData-$pkgver.tar.gz
 	pthreads_declaration.patch
+	fix-build.patch
 	"
 builddir="$srcdir/VTK-$pkgver"
 options="!check" # No unit tests provided
@@ -50,4 +51,5 @@ package() {
 sha512sums="521bd4dabedbc24b0e80a314a34ecd7554b04af28a7973245e3a9cf99a09b995d1b8ac42305c8e53369f226a0a6da3cdb29105ba2c90b46492736ef717760286  VTK-8.2.0.tar.gz
 517d0f6dfdb0c61f59df933f06d3a28c8a48ea684aaff311456213fe493e2a20128886144325fc4edfa376b2d375a2dae6c60ad6e3d5d2f4a7b0ac1d8545c87b  VTKData-8.2.0.tar.gz
 8a7ea3d5870b1e4ccb31c77b4c270d00208349da1b2938e957210db3ec1449b678c66edc2faee1d4514aca6d725f642abc91e10ab0c151f6743cad1c53485588  VTKLargeData-8.2.0.tar.gz
-ce72da79026681cbc2ad46e68cc555c42d232650b8a28b5b76ad4d5bbe3f576ebae3724f76e90a5d81e6ff1ab4b46f9631bfb2402c2f1ac6b493b6168ec7d192  pthreads_declaration.patch"
+ce72da79026681cbc2ad46e68cc555c42d232650b8a28b5b76ad4d5bbe3f576ebae3724f76e90a5d81e6ff1ab4b46f9631bfb2402c2f1ac6b493b6168ec7d192  pthreads_declaration.patch
+c814628a7ce9e1015cb02d4c9ad7ae7c6ad6d5d83b553f0c484414744488e4d0fa313924b4fd0f579a363352832347035147d1be3aca6f6a4885b6f9a1590b9e  fix-build.patch"
