--- a/testing/py3-libnacl/APKBUILD
+++ b/testing/py3-libnacl/APKBUILD
@@ -6,7 +6,7 @@ pkgver=1.7.1
 pkgrel=0
 pkgdesc="Python bindings for libsodium/tweetnacl"
 url="https://libnacl.readthedocs.org/"
-arch="noarch"
+arch="noarch !armhf !armv7 !x86" # Tests fail on the builder but pass on CI
 license="Apache-2.0"
 makedepends="py3-setuptools libsodium-dev"
 source="$_pkgname-$pkgver.tar.gz::https://github.com/saltstack/libnacl/archive/v$pkgver.tar.gz"
